# ManualRoverControlSystem

./: .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  README.md  antennas_setup.md  compose_jetson.sh  exec_host_docker.sh  exec_jetson_docker.sh  package.xml  start_host_docker.sh  start_jetson_dockers.sh  start_microros_docker.sh
WholeLaunch/launch/: my_script_launch.py
XboxController/install/: local_setup.sh
XboxController/install/teleop_twist_joy/share/teleop_twist_joy/: package.zsh
autolaunch/launch/: auto_launch.py
camerasub/: package.xml  setup.cfg  setup.py
camerasub/camerasub/: subber.py
command_broker/: CMakeLists.txt  package.xml
command_broker/src/: XboxBroker.cpp  subscriber_member_function.cpp
command_exposer/: CMakeLists.txt  package.xml
command_exposer/src/: CommandExpose.cpp  CommandExposer.cpp
docker_scripts/: .docker-compose.yml.swp  .ros_entrypoint.sh.swp  docker-compose.yml  hostDockerfile
docker_scripts/for_host/: docker-compose.yml  hostDockerfile  ros_entrypoint.sh
docker_scripts/for_jetson/: README.md  docker-compose.yml  jetsonDockerfile  ros_entrypoint.sh  start_jdocker.sh
gps_imu_pub/: CMakeLists.txt  package.xml
gps_imu_pubsub/: package.xml  setup.cfg  setup.py
gps_imu_pubsub/gps_imu_pubsub/: gps_imu_pub.py  gps_imu_sub.py
include/teleop_twist_joy/: teleop_twist_joy.h  teleop_twist_joy.hpp
jetson_comm/: Dockerfile  package.xml  ros_entrypoint.sh  setup.cfg  setup.py
jetson_comm/jetson_comm/: CommandReceiver.py
jetson_comm/jetson_comm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
jetson_comm/src/: CommandReciever.py
launch/: teleop-launch.py
mrcs-ui/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
mrcs-ui/src/: index.html
mrcs-ui/src/app/: app.component.spec.ts  app.component.ts
realsense-ros/: README.md
src/: teleop_node.cpp  teleop_twist_joy.cpp
teleop_twist_joy/install/: setup.sh
teleop_twist_joy/install/teleop_twist_joy/share/teleop_twist_joy/: package.bash  package.dsv  package.ps1  package.sh
teleop_twist_joy/launch/: teleop-launch.py
teleop_twist_joy/log/: latest_build
teleop_twist_joy/src/: teleop_twist_joy.cpp
test/: differential_joy_launch_test.py  holonomic_joy_launch_test.py  no_enable_joy_launch_test.py  only_turbo_joy_launch_test.py  six_dof_joy_launch_test.py  turbo_angular_enable_joy_launch_test.py  turbo_enable_joy_launch_test.py
