<?xml version="1.0"?>
<package format="2">
  <name>teleop_twist_joy</name>
  <version>0.1.2</version>
  <description>Generic joystick teleop for twist robots.</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_joy</url>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>

  <export>
  </export>
</package>
